force-app/main/default/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Grant</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>In-Kind Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Major Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cancelled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Admissions Process</fullName>
        <description>20151202 BH: This is just a test and is not actually being used</description>
        <isActive>true</isActive>
        <values>
            <fullName>A%2F Deposit</fullName>
        </values>
        <values>
            <fullName>A%2F Testing</fullName>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Enrolled</fullName>
        </values>
        <values>
            <fullName>Left</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>W%2FList A%2FDeposit</fullName>
        </values>
        <values>
            <fullName>W%2FList D%2FPaid</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>A_Deposit_Date__c</fullName>
        <description>The date when the student stage was last changed to A/ Deposit</description>
        <label>A/ Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A_Level_Option_Count__c</fullName>
        <formula>IF(NOT(ISBLANK(TEXT(SK_A_Level_Block_A_Option__c))),1,0) +
IF(NOT(ISBLANK(TEXT(SK_A_Level_Block_B_Option__c))),1,0) +
IF(NOT(ISBLANK(TEXT(SK_A_Level_Block_C_Option__c))),1,0) +
IF(NOT(ISBLANK(TEXT(SK_A_Level_Block_D_Option__c))),1,0) +
IF(NOT(ISBLANK(TEXT(SK_A_Level_Block_E_Option__c))),1,0) +
IF(NOT(ISBLANK(TEXT(SK_A_Level_Block_F_Option__c))),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A-Level Option Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Id_Text__c</fullName>
        <label>Account Id Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Account.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Note__c</fullName>
        <label>Accounting Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Former BIS Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Add_to_Register__c</fullName>
        <label>Attending School?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_A_Level_Exams_Detail__c</fullName>
        <inlineHelpText>Include the month and year that the A-Level exam will be sat (e.g. June 2017), whether or not it&apos;s an A-Level or an AS-Level plus any other useful information e.g. exam board</inlineHelpText>
        <label>Additional A-Level Exam(s) Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_A_Level_Exams__c</fullName>
        <inlineHelpText>Include the subject(s) for which an exam is to be taken when it&apos;s not already another of the student&apos;s options and therefore not part of the student&apos;s regular timetable in Kompanion</inlineHelpText>
        <label>Additional A-Level Exam(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>A_Level_Subject_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_GCSE_Exams_Detail__c</fullName>
        <inlineHelpText>Include the month and year that the GCSE exam will be sat (e.g. June 2017) and any other useful information e.g. exam board</inlineHelpText>
        <label>Additional GCSE Exam(s) Detail</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_GCSE_Exams__c</fullName>
        <inlineHelpText>Include the subject(s) for which an exam is to be taken when it&apos;s not already another of the student&apos;s options and therefore not part of the student&apos;s regular timetable in Kompanion</inlineHelpText>
        <label>Additional GCSE Exam(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>GCSE_Subject_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Note__c</fullName>
        <inlineHelpText>If you need to add an option to this list then please contact group management</inlineHelpText>
        <label>Special Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>School_Controlling_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Local Quota</fullName>
                </value>
                <value>
                    <fullName>Russian speaking Quota</fullName>
                </value>
                <value>
                    <fullName>+1 Student</fullName>
                </value>
                <value>
                    <fullName>Overseas / Distance Assessment</fullName>
                </value>
                <value>
                    <fullName>International Programme Student</fullName>
                </value>
                <value>
                    <fullName>Debenture Student</fullName>
                </value>
                <value>
                    <fullName>Scholarship Student</fullName>
                </value>
                <value>
                    <fullName>Child of Staff Member</fullName>
                </value>
                <value>
                    <fullName>Transfer Student</fullName>
                </value>
                <value>
                    <fullName>Returning Student</fullName>
                </value>
                <value>
                    <fullName>Former BIS Student (Confirmed)</fullName>
                </value>
                <value>
                    <fullName>Former BIS Student (Unconfirmed)</fullName>
                </value>
                <value>
                    <fullName>Global Local</fullName>
                </value>
                <value>
                    <fullName>Traditional Expat</fullName>
                </value>
                <value>
                    <fullName>Expat on a Budget</fullName>
                </value>
                <value>
                    <fullName>Local Achiever</fullName>
                </value>
                <value>
                    <fullName>High Net Worth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admissions_Notifications_Email__c</fullName>
        <defaultValue>&quot;admissions-notifications&quot;&amp;$User.Email_Domain_Extension__c</defaultValue>
        <description>Defines the email address which all admissions related notifications are to be sent to. Forwarding rules should be created in the email platform to then forward/redirect these emails to the relevant users.</description>
        <label>Admissions Notifications Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admissions_Progress_Note__c</fullName>
        <inlineHelpText>To record a note to summarise current activity of an application</inlineHelpText>
        <label>Admissions Progress Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>American__c</fullName>
        <formula>IF(TEXT(Nationality__c)=&quot;American&quot;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>American</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Date_Adjusted__c</fullName>
        <label>Application Date (Adjusted)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date_Formula__c</fullName>
        <formula>IF(
   ISBLANK(Application_Date_Adjusted__c),
   Application_Date__c,
   Application_Date_Adjusted__c
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date (Initial)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Text__c</fullName>
        <formula>IF( Assessment_Fee__c =TRUE, &quot;Paid&quot;,&quot;Not Paid&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Fee Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Month__c</fullName>
        <formula>MONTH( Application_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Period_Classification__c</fullName>
        <description>Classifies applications for NAE schools into the relevant period for use in a KPI dashboard component. The error values in the formula should never show on the dashboard as it would mean something strange has taken place e.g. a new student record created this week but with a starting date in a prior academic year.</description>
        <formula>IF(
   AND(
       TODAY() &gt;= DATE(YEAR(Related_School__r.First_Day_of_This_Fiscal_Year__c),08,01),
       TODAY() &lt; Related_School__r.First_Day_of_This_Fiscal_Year__c
       ),
   IF(
      CloseDate &lt; Related_School__r.Start_Date_T1_TY__c - 14,
      &quot;1. For Current School Year&quot;,
      IF(
         AND(
             CloseDate &gt;= Related_School__r.Start_Date_T1_TY__c - 14,
             CloseDate &lt;= DATE(YEAR(Related_School__r.Start_Date_T1_TY__c),09,30)
             ),
         &quot;2. For September Next Year&quot;,
         IF(
            CloseDate &gt; DATE(YEAR(Related_School__r.Start_Date_T1_TY__c),09,30),
            &quot;3. For beyond September Next Year&quot;,
            &quot;ERROR - Prior School Year&quot;
            )
         )
      ),
   IF(
      AND(
          TODAY() &lt; DATE(YEAR(Related_School__r.First_Day_of_This_Fiscal_Year__c)+1,08,01),
          TODAY() &gt;= Related_School__r.First_Day_of_This_Fiscal_Year__c
          ),
      IF(
         AND(
             CloseDate &gt;= Related_School__r.Start_Date_T1_TY__c - 14,
             CloseDate &lt; Related_School__r.Start_Date_T1_NY__c - 14
             ),
         &quot;1. For Current School Year&quot;,
         IF(
            AND(
                CloseDate &gt;= Related_School__r.Start_Date_T1_NY__c - 14,
                CloseDate &lt;= DATE(YEAR(Related_School__r.Start_Date_T1_NY__c),09,30)
                ),
            &quot;2. For September Next Year&quot;,
            IF(
               CloseDate &gt; DATE(YEAR(Related_School__r.Start_Date_T1_NY__c),09,30),
               &quot;3. For beyond September Next Year&quot;,
               &quot;ERROR - Prior School Year&quot;
               )
            )
         ),
      &quot;ERROR - UNKNOWN&quot;
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Period Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Stage__c</fullName>
        <formula>IF(AND(TEXT(StageName) = &apos;A/ Testing&apos;, Assessment_Date__c &lt; TODAY()), &apos;Assessment Complete&apos;, IF(AND(TEXT(StageName) = &apos;A/ Testing&apos;, Assessment_Date__c &gt;= TODAY()), &apos;Assessment Scheduled&apos;,
IF(AND(TEXT(StageName) = &apos;A/ Testing&apos;, TEXT(Assessment_Date__c) = &quot;&quot;), &apos;No Assessment Scheduled&apos;, TEXT(StageName))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>April_Starter_Term_Value__c</fullName>
        <formula>IF(AND(April_Starter__c = TRUE, TEXT(April_Starter_Term__c) = &quot;Term 2 / Spring Term&quot;, Auto_Audit_Start_Date_Copy__c &lt;= TODAY()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April Starter Term Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_Starter_Term__c</fullName>
        <label>April Starter Term</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>April_Starter__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Term 2 / Spring Term</fullName>
                </value>
                <value>
                    <fullName>Term 3 / Summer Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>April_Starter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If a student starts school in April this checkbox will be checked by means of a workflow rule and controls the &apos;April_Starter_Term__c&apos; field in which the actual starting term can be changed from term 3 (default) to term 2, if required.</description>
        <label>April Starter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <summarizedField>Admissions_Questionnaire__c.Date_of_Assessment__c</summarizedField>
        <summaryFilterItems>
            <field>Admissions_Questionnaire__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Admissions Assessment</value>
        </summaryFilterItems>
        <summaryForeignKey>Admissions_Questionnaire__c.Student_Name__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assessment_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Bus_Tier_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Bus Tier Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Recommended_Enrolment__c</fullName>
        <formula>IF(Has_Active_Enrolment_Fee_Line_Item__c = 0, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Recommended (Enrolment)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Recommended_Lunch__c</fullName>
        <formula>IF (ROUND(Terms_with_Invoice_Lines_Lunch__c,2) &lt; ROUND(Number_of_Terms_Enrolled_for_audit__c,2), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Recommended (Lunch)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Recommended_Tuition__c</fullName>
        <formula>IF (ROUND(Terms_with_Invoice_Lines_Tuition__c, 2) &lt; ROUND(Number_of_Terms_Enrolled_for_audit__c, 2), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Recommended (Tuition)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Audit_Start_Date_Copy__c</fullName>
        <description>Copies the value from the auto-audit start date field by means of a workflow rule/field update to help get around the 5000 character limit</description>
        <label>Auto-Audit Start Date (Copy)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Audit_Start_Date__c</fullName>
        <formula>IF(AND(CloseDate &lt; DATE(2013,08,01),ISNULL(Manually_Audited_To_Date__c)), DATE(2013,08,01), 
IF(NOT(ISNULL(Manually_Audited_To_Date__c)), Manually_Audited_To_Date__c, 

IF(MONTH(CloseDate)&lt;=3, DATE(YEAR(CloseDate),01,01), IF(MONTH(CloseDate)&gt;=8, DATE(YEAR(CloseDate),08,01), DATE(YEAR(CloseDate),04,01))) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto-Audit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Birth_Date_for_Indicative_YearGroupCalc__c</fullName>
        <description>Birth Date for Indicative YearGroupCalc. Takes 2 days off birth dates that fall on 30th &amp; 31st of the month and adds 2 days onto birth dates that fall on the first of the month. This is necessary to ensure that the indicative year group is ultimately calculated accurately.</description>
        <formula>if(OR(DAY(Birth_Date__c) = 30, DAY(Birth_Date__c) = 31), Birth_Date__c - 2, if(DAY(Birth_Date__c) = 1, Birth_Date__c + 2, Birth_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date for Indicative YearGroupCalc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Boys__c</fullName>
        <description>Used in the class list dashboard reports for NYIS and used on some Tutor/Teaching Group dashboards to plot a gender line on the graph</description>
        <formula>TEXT(Gender__c) = &quot;Male&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boys</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brazilian__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brazilian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Coordinator_Email__c</fullName>
        <defaultValue>&quot;bus-coordinator&quot;&amp;$User.Email_Domain_Extension__c</defaultValue>
        <description>The email address to which all automated emails related to a students bus services will be sent</description>
        <label>Bus Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bus_Permission_Slip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Permission Slip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Request_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Request Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <label>Bus Route</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_Service_First_Date_of_Use__c</fullName>
        <label>Bus Service First Date of Use</label>
        <summarizedField>Bus_Association__c.First_Date_of_Use__c</summarizedField>
        <summaryForeignKey>Bus_Association__c.Student__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Price_Tier_Next_Year__c</fullName>
        <description>Indicates the bus tier of the student for the next academic year, used to define the fee assignment
TO BE USED IN FUTURE</description>
        <label>Bus Service Price Tier Next Year</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bus_Service_Required_Next_Year__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
                <value>
                    <fullName>Tier 7</fullName>
                </value>
                <value>
                    <fullName>Tier 8</fullName>
                </value>
                <value>
                    <fullName>Tier 9</fullName>
                </value>
                <value>
                    <fullName>Tier 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_Service_Price_Tier_Prior_Value__c</fullName>
        <label>Bus Service Price Tier Prior Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Price_Tier__c</fullName>
        <description>Indicates the bus tier of the student, used to define the fee assignment</description>
        <label>Bus Service Price Tier</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bus_Service_Required__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
                <value>
                    <fullName>Tier 7</fullName>
                </value>
                <value>
                    <fullName>Tier 8</fullName>
                </value>
                <value>
                    <fullName>Tier 9</fullName>
                </value>
                <value>
                    <fullName>Tier 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_Service_Required_Next_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should be checked for students that require Bus Service for the next year. This is the controlling field for Bus_Service_Price_Tier_Next_Year__c
TO BE USED IN FUTURE</description>
        <label>Bus Service Required Next Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Required_Prior_Value__c</fullName>
        <label>Bus Service Required Prior Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Required_Text__c</fullName>
        <formula>IF (  Bus_Service_Required__c = TRUE, &quot;TRUE&quot;, &quot;FALSE&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Service Required Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bus Service Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Service_Text__c</fullName>
        <formula>IF(
   Bus_Service__c = 0,
   &quot;No&quot;,
   &quot;Yes&quot;
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Service Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Service__c</fullName>
        <description>Counts the number of current bus services for a student. Should be a maximum of one. Used in a validation rule to prevent multiple bus services and various reports, including auditing reports.</description>
        <label>Bus Service</label>
        <summaryFilterItems>
            <field>Bus_Association__c.Is_Current_Checkbox__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Bus_Association__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campus_Text__c</fullName>
        <description>Populated by means of a workflow rule (required to avoid the 5000 character limit), defines the name of the campus which a student belongs to, in schools which work under different campuses. BH 10/02/17: This field is also used in email templates, typically to direct notifications to the relevant admissions person where the school has multiple campuses.</description>
        <label>Campus Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <defaultValue>true</defaultValue>
        <label>-</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClassName_Next_Year__c</fullName>
        <description>Required to define the class name (year group and class) next year dependent on whether the student is an existing student or a student starting in the next academic year and if their tutor group is based on house or class.</description>
        <formula>Year_Group_Next_Year__c &amp; Class_N_Yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name (N.Yr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Copy__c</fullName>
        <description>Copies the value from the class picklist field to a standard text field for use in formulas, where otherwise using the TEXT function within the formula would push the maximum compiled size above 5000 characters.</description>
        <label>Class Copy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_N_Yr__c</fullName>
        <description>Required to define the class name (class only) next year dependent on whether the student is an existing student or a student starting in the next academic year and if their tutor group is based on house or class.</description>
        <formula>IF(
   CloseDate &gt;= Start_Date_Next_Fiscal_Year__c,
   IF(    
      AND(
          LEN(Class_Copy__c)&gt;1,
          NOT(CONTAINS(Class_Copy__c, &quot;Pending&quot;))
          ),
      &quot; &quot;&amp; House_Copy__c &amp; RIGHT(Class_Copy__c, 2),
      &quot; &quot;&amp; Class_Copy__c
      ),
   IF(
      AND(
          LEN(Class_Next_Year_Copy__c)&gt;1,
          NOT(CONTAINS(Class_Next_Year_Copy__c, &quot;Pending&quot;))
          ),
      &quot; &quot;&amp; House_Next_Year_Copy__c &amp; RIGHT(Class_Next_Year_Copy__c, 2),
      &quot; &quot;&amp; Class_Next_Year_Copy__c
      )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class (N.Yr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <formula>TEXT(Year_Group__c)&amp;&quot; &quot;&amp; Class_T_Yr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name (T.Yr)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Next_Year_Copy__c</fullName>
        <description>Copies the value from the class next year picklist field to a standard text field for use in formulas, where otherwise using the TEXT function within the formula would push the maximum compiled size above 5000 characters.</description>
        <label>Class Next Year Copy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>